kubernetes/linkerd/httproute-template.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: template-routes-name # TODO: Customize
  namespace: template-namespace      # TODO: Customize
spec:
  parentRefs:
    - name: template-service-name # TODO: Match your K8s Service name
      kind: Service
      port: 80 # TODO: Match the port on your K8s Service
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: / # TODO: Define your actual routes
      filters:
        - type: RequestTimeout # This is a standard Gateway API filter type
          requestTimeout:
            timeout: "5s"
      backendRefs:
        - name: template-service-name # TODO: Match your K8s Service name
          port: 80 # TODO: Match the port on your K8s Service
